--- a/gb/17/10/12/n9726744.md
+++ b/gb/17/10/12/n9726744.md
@@ -1,21 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qbxytb345/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qbxytb345/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qbxytb345/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qbxytb345/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qbxytb345/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qbxytb345/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qbxytb345/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qbxytb345/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qbxytb345/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qbxytb345/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qbxytb345/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qbxytb345/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qbxytb345/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qbxytb345/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qbxytb345/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qbxytb345/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/qbxytb345/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qbxytb345/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/qbxytb345/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qbxytb345/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qbxytb345/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qbxytb345/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qbxytb345/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qbxytb345/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>少年每天给街友零钱 没想到5年后街友的话让他泪崩</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/10/GettyImages-489709086-600x400.jpg" />
 <h6>美国一名少年做暑期实习的时候，每天给一位街友些许零钱。没想到5年后两人再次相见，街友的话让少年泪流满面。(Kevork Djansezian/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2017年10月13日讯】（大纪元记者方紫韵编译报导）美国一名16岁少年做暑期实习时天天给一位<ahref="https://github.com/qbxytb345/djy/blob/master/gb/tag/%E8%A1%97%E5%8F%8B.md#1">街友</a>一点儿零钱。5年后，他在餐厅遇见西装革履的男子时，根本没想到他就是那位街友。</p>
+	<p>【大纪元2017年10月13日讯】（大纪元记者方紫韵编译报导）美国一名16岁少年做暑期实习时天天给一位<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A1%97%E5%8F%8B.md#1">街友</a>一点儿零钱。5年后，他在餐厅遇见西装革履的男子时，根本没想到他就是那位街友。</p>
 <p>《英文大纪元时报》报导，如今已经20多岁的这名男子，16岁时在纽约上州的家乡读书。这一年的暑假，他在市中心的一家律师行找到了一份实习工作，工作期限为2个月。这份工作可以很好地为这名少年积累职业经验，也可以让他积攒一点儿钱。</p>
 <p>报导并没有透露这名男子的名字，为方便起见，我们姑且叫他“大伟”（David）。</p>
 <h2>实习少年的善心得到肯定</h2>
 <p>在律师楼实习，大伟的薪水并不高，所以每天中午的午餐，他选择在路边的餐车上买热狗或土耳其烤肉夹饼或墨西哥卷饼果腹。因为街边的餐车当时只收现金，所以大伟每天都会捏着钞票外出买午餐。</p>
-<figure id="attachment_9726823" style="width: 599px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/10/GettyImages-451814374.jpg"><img class=" wp-image-9726823" src="https://i.epochtimes.com/assets/uploads/2017/10/GettyImages-451814374-450x307.jpg" alt="美国很多城市都有这种在路边经营餐点的拖车，贩售简单的热食。(Justin Sullivan/Getty Images)" width="599" b="409" /></a><figcaption class="wp-caption-text">美国很多城市都有这种在路边经营餐点的拖车，贩售简单的热食。(Justin Sullivan/Getty Images)</figcaption></figure>
-<p>每次买好一份午餐，大伟都会把零钱给餐车附近乞讨的<ahref="https://github.com/qbxytb345/djy/blob/master/gb/tag/%E6%97%A0%E5%AE%B6%E5%8F%AF%E5%BD%92%E8%80%85.md#1">无家可归者</a>伊万（Ivan），而这些零钱常常就是大伟口袋里仅剩下的现金。</p>
+<figure id="attachment_9726823" aria-describedby="caption-attachment-9726823" style="width: 599px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/10/GettyImages-451814374.jpg"><img class=" wp-image-9726823" src="https://i.epochtimes.com/assets/uploads/2017/10/GettyImages-451814374-450x307.jpg" alt="美国很多城市都有这种在路边经营餐点的拖车，贩售简单的热食。(Justin Sullivan/Getty Images)" width="599" b="409" /></a><figcaption id="caption-attachment-9726823" class="wp-caption-text">美国很多城市都有这种在路边经营餐点的拖车，贩售简单的热食。(Justin Sullivan/Getty Images)</figcaption></figure>
+<p>每次买好一份午餐，大伟都会把零钱给餐车附近乞讨的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%A0%E5%AE%B6%E5%8F%AF%E5%BD%92%E8%80%85.md#1">无家可归者</a>伊万（Ivan），而这些零钱常常就是大伟口袋里仅剩下的现金。</p>
 <p>“我总是说：‘你好啊，伊万！’或者‘很高兴见到你，朋友’。或者其他类似的话。”大伟数年后在社交媒体上留言，回忆当年他跟伊万打招呼的用语。</p>
 <p>大伟介绍，伊万当时罹患有“创伤后应激障碍”（PTSD），不仅因此逃离了家庭，而且只相信自己的直觉，“他的精神状况差极了”。大伟很同情伊万，每天都会和他打招呼并对他很热情。</p>
-<figure id="attachment_9726825" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/10/GettyImages-594737200.jpg"><img class="size-large wp-image-9726825" src="https://i.epochtimes.com/assets/uploads/2017/10/GettyImages-594737200-600x400.jpg" alt="有研究报告表示，美国大部分街友的精神状况不好。(BRENDAN SMIALOWSKI/AFP/Getty Images)" width="600" b="400" /></a><figcaption class="wp-caption-text">有研究报告表示，美国大部分<ahref="https://github.com/qbxytb345/djy/blob/master/gb/tag/%E8%A1%97%E5%8F%8B.md#1">街友</a>的精神状况不好。(BRENDAN SMIALOWSKI/AFP/Getty Images)</figcaption></figure>
+<figure id="attachment_9726825" aria-describedby="caption-attachment-9726825" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/10/GettyImages-594737200.jpg"><img class="size-large wp-image-9726825" src="https://i.epochtimes.com/assets/uploads/2017/10/GettyImages-594737200-600x400.jpg" alt="有研究报告表示，美国大部分街友的精神状况不好。(BRENDAN SMIALOWSKI/AFP/Getty Images)" width="600" b="400" /></a><figcaption id="caption-attachment-9726825" class="wp-caption-text">有研究报告表示，美国大部分<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A1%97%E5%8F%8B.md#1">街友</a>的精神状况不好。(BRENDAN SMIALOWSKI/AFP/Getty Images)</figcaption></figure>
 <p>2个月时间很快就这样过去了，大伟对伊万的好，被周围的人们看在眼里。</p>
 <p>临近实习结束的一天，大伟在餐车上点了一份土耳其烤肉夹饼，但他突然发现他竟然忘了带钱，而快速走到附近的ATM自助柜员机取款也没有成功。</p>
 <p>大伟正不知道该怎么跟餐车上的小贩解释的时候，小贩突然说：“我看到你每天对伊万做的了。拿着吧，你配享用它。”</p>
@@ -23,7 +23,7 @@
 <p>暑期结束后，大伟回到校园，并按部就班地过着日子，渐渐地，他对伊万的记忆已经变得模糊。</p>
 <p>5年后，已经工作的大伟回到故乡小城，约上当年的好朋友回到曾经很喜欢的餐厅用餐。</p>
 <p>边吃饭边聊天，两个相识多年的朋友说着当年的趣事，聊着这些年的经历。突然，一个声音打断了他们，是一个穿着得体休闲西装的男士。</p>
-<figure id="attachment_9726838" style="width: 596px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/10/1606281108212483.jpg"><img class=" wp-image-9726838" title="Handsome guy fixes up his tie." src="https://i.epochtimes.com/assets/uploads/2017/10/1606281108212483-600x401.jpg" alt="Handsome guy fixes up his tie." width="596" b="398" /></a><figcaption class="wp-caption-text">一名男子在系领带。(Fotolia)</figcaption></figure>
+<figure id="attachment_9726838" aria-describedby="caption-attachment-9726838" style="width: 596px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/10/1606281108212483.jpg"><img class=" wp-image-9726838" title="Handsome guy fixes up his tie." src="https://i.epochtimes.com/assets/uploads/2017/10/1606281108212483-600x401.jpg" alt="Handsome guy fixes up his tie." width="596" b="398" /></a><figcaption id="caption-attachment-9726838" class="wp-caption-text">一名男子在系领带。(Fotolia)</figcaption></figure>
 <p>“打扰你们了！你还认识我吗？”男士问大伟。</p>
 <p>“我回头一看，一个高个子、衣着得当的男士就站在我们的台子前。我上下打量了他几个来回，突然灵光一现。”大伟写道，他问这位男士：“你是伊万？真的吗？”</p>
 <p>男士听到大伟叫出自己的名字，眼里涌出泪花。两个5年未见的老相识先是握手，紧接着紧紧地拥抱在一起，伊万哽咽难言，只是说着：“谢谢你！”</p>
@@ -39,42 +39,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/4/n12379166.md#1">【最新疫情9·6】美22州新增病例上升</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/5/n12381926.md#1">【最新疫情9·7】川普：中共送病毒出境 应担责</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/5/n12382021.md#1">【最新疫情9·5】川普：再给民众3千亿美元</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/8/n12387680.md#1">【最新疫情9.8】川普承诺将大幅减税</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/6/n8878233.md#1">“神韵是最精彩的！感觉是神话般的演出”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/6/n8878438.md#1">“演出在讲故事，这是一种文化的复活”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/6/n8878454.md#1">高级工程师： 神韵舞蹈紧紧‘摄’住观众身心</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/6/n8878889.md#1">设计师：神韵让我看到了复兴和希望</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/7/n8885102.md#1">公司老板：祝神韵继续取得成功</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/12/28/n10000152.md#1">神韵歌词蕴含智慧 电信建筑师受益匪浅</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/14/n10143963.md#1" target="_blank">中共进入联合国与尼克松访华内幕（下）</a></li><li><a href="https://github.com/qbxytb345/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/11/n11377666.md#1" target="_blank">平凡人不凡的修炼经历</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/19/n10650677.md#1" target="_blank">林辉：开了北大自杀先例的史学教授</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/5/n4520825.md#1" target="_blank">石铭：从爆破专家被酷刑致死看江氏集团的惨无人道</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/8/29/n12366244.md#1">乐山大佛洗脚天下乱 刘伯温预言了出路</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/1/n12373464.md#1">北宋有位“鱼头参政” 让皇帝感动让同僚敬畏</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/4/n12380954.md#1">【馨香雅句】原来这项技能承传千年 曾让中国人武艺高强</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/2/n12374931.md#1">《傲慢与偏见》：19世纪名著至今仍能启迪人心</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/8/10/n12318970.md#1">【命理】为何王侯将相命中多见七杀凶星？</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/8/n12387727.md#1">【纽约调查】中国芬太尼害惨美国 川普：这是战争</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/8/n12387607.md#1">【拍案惊奇】中共密件曝若占台湾 要建集中营</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/8/n12389200.md#1">【重播】川普到访佛州 宣布扩展海上钻探禁令</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/7/n12387142.md#1">像科幻大片 美军大炮准确击落巡航导弹</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/7/n12387030.md#1">川普为何考虑制裁中芯？一份报告震动华府</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/7/n12387319.md#1">中印冲突升级 印军鸣枪警告 45年来首次</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/6/n12384714.md#1">陆网民看盗版《花木兰》撑警女主角遭六成差评</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/7/n12387235.md#1">林志玲丈夫AKIRA 顺利取得台湾居留证</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/7/n12385497.md#1">阿娇下榻厦门酒店出意外 头部受伤送医治疗</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/7/n12387492.md#1">赵薇代言陷风波 被指代理制度“疑似传销”</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/7/n12387123.md#1">冯小刚代言手游引热议 网友：电影行业太惨了</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/6/n12383740.md#1">血旗拿反士兵晕倒 中共军队在国际赛场出糗</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/6/n12383875.md#1">加拿大10岁男童遭美洲狮攻击 小狗奋勇救人</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/6/n12383992.md#1">美国空姐分享入住旅馆诀窍 网上爆红</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/7/n12385823.md#1">美军B-2轰炸机降落印度洋小岛 画面曝光</a></li>
-<li><a href="https://github.com/qbxytb345/djy/blob/master/gb/20/9/4/n12380960.md#1">这些食物燃脂、促代谢！自制3饮料边喝边瘦</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qbxytb345/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qbxytb345/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/10/12/n9726744.htm">少年每天给街友零钱 没想到5年后街友的话让他泪崩</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/10/12/n9726744.htm">少年每天给街友零钱 没想到5年后街友的话让他泪崩</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/qbxytb345/djy/blob/master/gb/17/10/12/n9726744.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qbxytb345/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qbxytb345/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qbxytb345/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qbxytb345/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qbxytb345/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/10/12/n9726744.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
